--- a/src/main/resources/templates/PatchNoteBoard/patchWrite.html
+++ b/src/main/resources/templates/PatchNoteBoard/patchWrite.html
@@ -9,6 +9,28 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.css" rel="stylesheet">
 
+    <style th:inline="text">
+        body{
+            width: 100vw;
+            height: 100vh;
+            background-color: #153040;
+            background-image: url([[@{/img/newBackpiture.jpg}]]);
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+        .summernote{
+            width: 100vw;
+            height: 70vh;
+        }
+
+        .summernote img{
+            max-width: 100%;
+        }
+
+    </style>
+
+
 </th:block>
 
 <!-- index.html 고유 스크립트 추가 -->
@@ -32,15 +54,12 @@
             <label for="title">[제목]</label>
             <input type="text" class="form-control bg-dark text-light" id="title">
         </div>
-        <textarea class="form-control summernote" rows="5" id="content"></textarea>
+        <textarea class="summernote" rows="5" id="content"></textarea>
         <button type="button" class="btn btn-warning btn-block" onclick="patchnoteWrite()">작성</button>
     </div>
     <script>
         $('.summernote').summernote({
             placeholder: '글작성 해주세요',
-            maxWidth: 1110,
-            width: 1110,
-            height: 600,
             lang: 'ko-KR'
         });
     </script>
