--- a/src/main/resources/templates/PortfolioBoard/PortfolioBoardDetail.html
+++ b/src/main/resources/templates/PortfolioBoard/PortfolioBoardDetail.html
@@ -6,69 +6,166 @@
 >
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
+  <style th:inline="text">
+    @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
+    p{
+      color: white;
+    }
+
+    .mainDiv{
+      width: 100%;
+      height: 100vh;
+    }
+
+    .leftDiv{
+      width: 70vw;
+      height: 100%;
+      float: left;
+      background-image: url([[@{/img/newBackpiture.jpg}]]);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      border-right: 1px solid white;
+    }
+
+    .leftDiv h1{
+      color: white;
+      font-size: 2vw;
+      margin: 50px 50px;
+      font-family: 'Black Han Sans', sans-serif;
+    }
+
+    .rightDiv{
+      text-align: center;
+      width: 30vw;
+      height: 100%;
+      background-color: black;
+      display: inline-block;
+    }
+
+    .divHeader{
+      margin-top: 8.5vh;
+    }
+
+    .divHeader a{
+      font-family: 'Noto Sans KR', sans-serif;
+      font-size: 1vw;
+      margin-left: 5%;
+      margin-right: 5%;
+    }
+
+    .divContent{
+      margin-top: 30vh;
+    }
+
+    .divContent p{
+      font-family: 'Noto Sans KR', sans-serif;
+      font-size: 1.3vmax;
+    }
+
+    .divFooter{
+      position: absolute;
+      bottom: 2vw;
+      text-align: right;
+      display: inline-block;
+    }
+
+    .divFooter p{
+      font-family: 'Black Han Sans', sans-serif;
+      font-size: 1vw;
+    }
+
+    .boardDivs{
+      margin: 2% 20% 20% 10%;
+      text-align: center;
+      font-family: 'Noto Sans KR', sans-serif;
+
+    }
+
+    .boardDiv{
+      color: white;
+      border-bottom: solid 2px black;
+      border-top: solid 2px black;
+      margin-top: 2%;
+      background-color: #153040;
+    }
+    /* 라벨이 제목임*/
+    .title{
+      font-size: 1.2vw;
+    }
+
+    .boardDiv span{
+      font-size: 1vw;
+    }
+
+    .boardDivs ul{
+      margin-top: 5%;
+    }
+
+    .boardDivs span{
+      font-size: 1vw;
+      color: white;
+
+    }
+
+  </style>
 
 </th:block>
 
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
-  <script type="text/javascript" th:src="@{/js/main.js}"></script>
+  <script type="text/javascript" th:src="@{/js/patchnote.js}"></script>
 </th:block>
 
 <div layout:fragment="content">
-  <div class="backContainer" style="margin-top: 0%;">
-  </div>
-  <div class="jumbotron mt-2 text-center" style="background-color: transparent;color: black ">
-    <div style="font-weight: bold; color: whitesmoke;">
-      <p style="letter-spacing: -13px; font-size: 150px; font-family: 한컴돋움">PortFolio</p>
+
+  <div class="mainDiv">
+
+    <div class="leftDiv">
+      <a href="/"><h1>FORTFOLIO</h1></a>
+
+      <div class="boardDivs" th:if="${boards.size() != 0}">
+        <a th:href=" @{/auth/portboard/details(id=${board.getId()})}"  th:each="board :${boards}">
+          <div class="boardDiv" >
+            <span class="title">제목 :</span> &nbsp; <span th:text="${board.getTitle()}"></span> <br>
+            <span>작성자 :</span> &nbsp; <span th:text="${board.getUser().getUsername()}"></span>&nbsp;&nbsp;
+            <span>작성날짜 :</span>&nbsp;  <span th:text="${board.getCreateDate()}"></span>
+          </div>
+        </a>
+
+        <ul class="pagination justify-content-center">
+          <li class="page-item " th:if="${boardsPage.number != 0}"><a class="page-link bg-white text-dark" th:href="@{/auth/Portfolio/(page=${boardsPage.number -1})}">Previous</a></li>
+          <th:block th:each="num : ${#numbers.sequence(0, boardsPage.totalPages - 1)}">
+            <li class="page-item "><a class="page-link bg-white text-dark" th:href="@{/auth/Portfolio/(page=${num})}" th:text="${num+1}"></a></li>
+          </th:block>
+          <li class="page-item " th:if="${boardsPage.last != true}"><a class="page-link bg-dark text-white" th:href="@{/auth/Portfolio/(page=${boardsPage.number +1})}">Next</a></li>
+        </ul>
+      </div>
+      <div class="boardDivs" th:if="${boards.size() == 0}">
+        <span class="title"> 저장된 글이 없습니다.</span>
+      </div>
+
+    </div>
+
+    <div class="rightDiv">
+      <div class="divHeader">
+        <a href="/auth/patchnote">공지</a>
+        <a href="/auth/boardmain">게시판</a>
+        <a href="#">기술게시판</a>
+        <a href="/auth/Portfolio">포트폴리오</a>
+      </div>
+      <div class="divContent">
+        <p>개인적으로 공부하고 얻은 지식과 <br> 다양한 기능들을 보여주는 블로그입니다.</p>
+        <a href="#"><p>포트폴리오 보러가기</p></a>
+      </div>
+      <div class="divFooter">
+        <a href="/"><p>YBLOGLAB</p></a> &nbsp;&nbsp;
+        <a href="https://velog.io/@ddpound"><p>ddpound.log</p></a>
+      </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-2"></div>
-    <table class="table col-8" style="background-color: transparent; color: whitesmoke;">
-      <thead>
-      <tr style="color: whitesmoke;">
-        <th>제목</th>
-        <th>작성자</th>
-        <th>조회수</th>
-        <th>작성일</th>
-      </tr>
-      </thead>
-      <tbody>
-
-      <tr th:each="items : ${boards}">
-        <td><a th:href=" @{/auth/portboard/details(id=${items.getId()})}">[[${items.title}]]</a></td>
-        <td th:text="${items.getUser().getUsername()}"></td>
-        <td th:text="${items.getCount()}"></td>
-        <td th:text="${items.getCreateDate()}"></td>
-      </tr>
-
-      </tbody>
-    </table>
-    <br>
-
-  </div>
-  <ul class="pagination justify-content-center">
-
-    <li class="page-item " th:if="${boardsPage.number != 0}"><a class="page-link bg-white text-dark" th:href="@{/auth/Portfolio/(page=${boardsPage.number-1})}">Previous</a></li>
-    <li class="page-item " th:if="${boardsPage.last != true}"><a class="page-link bg-dark text-white" th:href="@{/auth/Portfolio/(page=${boardsPage.number+1})}">Next</a></li>
-  </ul>
-  <br>
-  <div class="row">
-  <div class="col-2"></div>
-  <div class="col-8" th:if="${#authentication.getName()} == 'Y'">
-    <button type="button" class="btn btn-warning btn-block" onclick="portboardWriteGo()">글작성하러가기</button>
-  </div>
-  </div>
-
-
-
-
-
-
-
-
-
 
 
 </div>
