--- a/src/main/resources/templates/PortfolioBoard/portboardDetails.html
+++ b/src/main/resources/templates/PortfolioBoard/portboardDetails.html
@@ -6,10 +6,56 @@
 >
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
-  <style>
+  <style th:inline="text">
+
+    body{
+      background-color: #153040;
+    }
+
     .boardcontent img{
       max-width: 100%;
     }
+
+    .boardMainBox{
+      margin: 0 0 0 0;
+      text-align: center;
+      background-color: white;
+      width: 100vw;
+      height: auto;
+
+    }
+
+    .titleInfodiv {
+      background-color: #153040;
+      width: 100%;
+      height: auto;
+      color : white;
+      font-family: 'Noto Sans KR', sans-serif;
+      font-size: 1vw;
+    }
+
+
+    .boardcontent img{
+      max-width: 100%;
+    }
+
+    .card-header{
+      background-color: #153040;
+      color: white;
+    }
+
+    .headerbar{
+      background-color: black;
+      text-align: center;
+      font-family: 'Noto Sans KR', sans-serif;
+      font-size: 1vw;
+    }
+
+    .headerbar a{
+      margin: 0 5vw;
+    }
+
+
   </style>
 
 </th:block>
@@ -22,8 +68,14 @@
 
 
 <div layout:fragment="content">
-  <div class="container bg-white form-group border-top border-secondary rounded" style="background-color:rgba( 255, 255, 255, 0.5 );">
-  <div class="form-group text-light font-weight-bold bg-dark text-center">
+  <div class="boardMainBox" >
+    <div class="headerbar">
+      <a href="/">YBLOGLAB</a>
+      <a href="/auth/patchnote">공지</a>
+      <a href="/auth/boardmain">게시판</a>
+      <a href="/auth/Portfolio">포트폴리오</a>
+    </div>
+  <div class="titleInfodiv">
     <label>[제목]</label>
     <h3 th:text="${portboard.getTitle()}"></h3>
     <h6>조회수 : <label th:text="${portboard.getCount()}"></label> </h6>
@@ -34,10 +86,9 @@
       <button type="button" class="btn btn-outline-warning" id="boardmodify" onclick="goModifywritePortfolio(boardId)">수정</button>
       <button type="button" class="btn btn-outline-danger" id="boarddelete" onclick="PortfolioDelete(boardId)">삭제</button>
     </div>
-
   </div>
 
-    <div class="boardcontent" style="width: 1110px; height: auto;" th:utext="${portboard.getContent()}"> </div>
+    <div class="boardcontent" th:utext="${portboard.getContent()}"> </div>
     <br><br><br><br><br><br><br>
   </div>
 
