--- a/src/main/resources/templates/board/boardDetails.html
+++ b/src/main/resources/templates/board/boardDetails.html
@@ -7,11 +7,56 @@
 <!-- index.html 고유 CSS 추가 -->
 <th:block layout:fragment="css">
 
-  <style>
+
+  <style th:inline="text">
+    @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+
+    body{
+      background-color: #153040;
+    }
+
+    .boardMainBox{
+      margin: 0 0 0 0;
+      text-align: center;
+      background-color: white;
+      width: 100vw;
+      height: auto;
+
+    }
+
+    .titleInfodiv {
+      background-color: #153040;
+      width: 100%;
+      height: auto;
+      color : white;
+      font-family: 'Noto Sans KR', sans-serif;
+      font-size: 2vw;
+    }
+
+
     .boardcontent img{
       max-width: 100%;
     }
+
+    .card-header{
+      background-color: #153040;
+      color: white;
+    }
+
+    .headerbar{
+      background-color: black;
+      text-align: center;
+      font-family: 'Noto Sans KR', sans-serif;
+      font-size: 2.5vh;
+    }
+
+    .headerbar a{
+      margin: 0 5vw;
+    }
+
   </style>
+
 </th:block>
 
 <!-- index.html 고유 스크립트 추가 -->
@@ -25,10 +70,14 @@
 <div layout:fragment="content">
 
 
-  <div class="container bg-white form-group border-top border-secondary rounded" style="background-color:rgba( 255, 255, 255, 0.5 );">
-
-    <div class="form-group text-light font-weight-bold bg-dark text-center rounded">
-      <label>[제목]</label>
+  <div class="boardMainBox">
+    <div class="headerbar">
+      <a href="/">YBLOGLAB</a>
+      <a href="/auth/patchnote">공지</a>
+      <a href="/auth/boardmain">게시판</a>
+      <a href="/auth/Portfolio">포트폴리오</a>
+    </div>
+    <div class="titleInfodiv">
       <h3 th:text="${board.getTitle()}"></h3>
       <h6> 작성자 : <label th:text="${board.getUser().getUsername()}"></label> 조회수 : <label th:text="${board.getCount()}"></label></h6>
       <div th:if="${board.getUser().getUsername()}== ${#authentication.getName()} or ${#authentication.getName()}== 'Y' ">
@@ -40,7 +89,7 @@
       </div>
     </div>
 
-    <div class="boardcontent" style="width: 1110px; height: auto;" th:utext="${board.getContent()}"> </div>
+    <div class="boardcontent" th:utext="${board.getContent()}"> </div>
     <br>
     <hr />
     <div class="card " th:if=" ${#authentication.getName()} != 'anonymousUser' ">
@@ -70,16 +119,7 @@
         </li>
       </ul>
       <br><br><br>
-
     </div>
-
-
-
-
-
   </div>
-
-
-
 </div>
 </html>
