--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -5,21 +5,24 @@
 >
 <head th:fragment="configFragment">
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:url" content="https://ybloglab.shop/">
     <meta property="og:title" content="YBlogLab">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://ybloglab.shop/img/YLabLogo.png">
     <meta property="og:description" content="포트폴리오용 개인 블로그" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
     <!-- 공통으로 쓰이는 css파일을넣는다.-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
     <style >
-        body{
-            background: url("/img/backpiture.jpg");
-            background-color: #010417;
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: 99.5% 99.5%;
+        html, body{
+            overflow: visible;
+            width: 100vw;
+            height: 100vh;
+            margin : 0;
+            padding: 0;
         }
         a{
             transition: 0.7s;
@@ -27,7 +30,6 @@
         a:link {color: whitesmoke; font-weight: bold; text-decoration: none;}
         a:visited {color: whitesmoke; font-weight: bold; text-decoration: none;}
         a:hover {color: darkorange; font-weight: bold; text-decoration: underline;}
-
 
     </style>
 
