--- a/src/main/resources/templates/skillBoard/skillBoardWrite.html
+++ b/src/main/resources/templates/skillBoard/skillBoardWrite.html
@@ -18,7 +18,6 @@
             height: 100vh;
         }
 
-
         body ,html{
             width: 100vw;
             height: 100%;
@@ -43,7 +42,7 @@
 
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
-    <script type="text/javascript" th:src="@{/js/board.js}"></script>
+    <script type="text/javascript" th:src="@{/js/skillboard.js}"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-bs4.min.js"></script>
@@ -63,8 +62,8 @@
             <input type="text" class="form-control bg-dark text-light text-center" id="title">
         </div>
         <textarea class="summernote" rows="5" id="content" style="resize: none;"></textarea>
+        <button type="button" class="btn btn-warning btn-block" onclick="skillBoardWrite()">작성</button>
 
-        <button type="button" class="btn btn-warning btn-block" onclick="boardWrite()">작성</button>
     </div>
     <script>
         window.addEventListener('beforeunload', (event) => {
@@ -74,12 +73,11 @@
             event.returnValue = '작성내용이 없어질수도있습니다. 작성버튼을 눌러주셨으면 나가셔도됩니다!';
             $.ajax({
                 type: "DELETE",
-                url : "/board/temporarydelete"
+                url : "/skillboard/temporarydelete"
             })
         });
 
         $('.summernote').summernote({
-
             focus: true,                  // 에디터 로딩후 포커스를 맞출지 여부
             lang: "ko-KR",					// 한글 설정
             placeholder: '최대 2048자까지 쓸 수 있습니다',	//placeholder 설정
@@ -88,7 +86,7 @@
                 // 업로드와 동시에 진행되는 콜백 함수
                 onImageUpload : function(files) {
                     for(i=0;i<files.length;i++){
-                        uploadSummernoteImageFile(files[i],this);
+                        skillBoarduploadSummernoteImageFile(files[i],this);
                     }
                 },
                 onPaste: function (e) {
@@ -102,15 +100,13 @@
                 }
             }
         });
+
         $("div.note-editable").on('drop',function(e){
             for(i=0; i< e.originalEvent.dataTransfer.files.length; i++){
-                uploadSummernoteImageFile(e.originalEvent.dataTransfer.files[i],$("#summernote")[0]);
+                skillBoarduploadSummernoteImageFile(e.originalEvent.dataTransfer.files[i],$("#summernote")[0]);
             }
             e.preventDefault();
         })
-
-
-
 
     </script>
 
