--- a/src/main/resources/templates/skillBoard/skillBoardDetails.html
+++ b/src/main/resources/templates/skillBoard/skillBoardDetails.html
@@ -102,7 +102,7 @@
 
         <div class="card" style="margin-bottom: 15px;">
             <div class="card-header " style="margin-bottom: 15px;">댓글 리스트 </div>
-            <ul class="list-group" th:each="reply :${board.getYreplys()}">
+            <ul class="list-group" th:each="reply :${board.getSkillBoardReplyList()}">
                 <script th:inline="javascript">
                     // 보드 Id , Reply id가 들어가야함
                     let replyId = [[${reply.getId()}]]
