--- a/src/main/resources/templates/PortfolioBoard/PortfolioBoardDetail.html
+++ b/src/main/resources/templates/PortfolioBoard/PortfolioBoardDetail.html
@@ -152,8 +152,8 @@
     <div class="rightDiv">
       <div class="divHeader">
         <a href="/auth/patchnote">공지</a>
-        <a href="/auth/boardmain">게시판</a>
-        <a href="#">기술게시판</a>
+        <a href="/auth/boardmain">자유 게시판</a>
+        <a href="/auth/skillboard">기술게시판</a>
         <a href="/auth/Portfolio">포트폴리오</a>
       </div>
       <div class="divContent">
