--- a/src/main/resources/templates/board/boardDetails.html
+++ b/src/main/resources/templates/board/boardDetails.html
@@ -48,8 +48,32 @@
       background-color: black;
       text-align: center;
       font-family: 'Noto Sans KR', sans-serif;
-      font-size: 2.5vh;
+      font-size: 1.5vw;
     }
+
+    /* 여기가 모바일*/
+    @media screen and (max-width: 769px) {
+      .headerbar{
+        background-color: black;
+        text-align: center;
+        font-family: 'Noto Sans KR', sans-serif;
+        font-size: 3vw;
+      }
+    }
+
+    /* 여기가 태블릿*/
+    @media screen and (max-width: 1024px) {
+      .headerbar{
+        background-color: black;
+        text-align: center;
+        font-family: 'Noto Sans KR', sans-serif;
+        font-size: 4vw;
+      }
+    }
+
+
+
+
 
     .headerbar a{
       margin: 0 5vw;
