--- a/src/main/resources/templates/board/mBoardMain.html
+++ b/src/main/resources/templates/board/mBoardMain.html
@@ -11,15 +11,8 @@
         @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
-        html{
-            width: 100%;
-            height: 100vh;
-
-        }
-
         body{
-            width: 100%;
-            height: 100%;
+            overflow: auto;
             background-image: url([[@{/img/newBackpiture.jpg}]]);
             background-size: cover;
             background-position: center;
@@ -31,81 +24,45 @@
             color: white;
         }
 
-        .mainDiv{
-            width: 100%;
-            height: 100vh;
-        }
-
-        .leftDiv{
+        .boardMainBox{
+            margin: 0 0 0 0;
+            text-align: center;
             width: 100vw;
-            height: 100%;
-        }
-
-        .leftDiv h1{
-            color: white;
-            font-size: 2vw;
-            margin: 50px 50px;
-            font-family: 'Black Han Sans', sans-serif;
+            height: auto;
         }
 
         .mobileHeader{
+            background-color: black;
             text-align: center;
-            margin-top: 15%;
-            margin-left: 4vw;
-            margin-right: 4vw;
+            font-family: 'Noto Sans KR', sans-serif;
+            font-size: 3.2vw;
         }
 
         .mobileHeader a{
-            font-family: 'Noto Sans KR', sans-serif;
-            font-size: 2vw;
-            margin-left: 3%;
-            margin-right: 3%;
-        }
-
-
-        .divContent p{
-            font-family: 'Noto Sans KR', sans-serif;
-            font-size: 1.3vmax;
-        }
-
-
-
-        .divFooter p{
-            font-family: 'Black Han Sans', sans-serif;
-            font-size: 1vw;
+            margin: 0 2.5vw;
         }
 
         .boardDivs{
-            margin: 8% 0 0 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        .boardDiv{
+            margin-top: 5%;
+            border-top: solid 2px orange;
+            border-bottom: solid 2px orange;
+            background-color: #1b1e21;
             text-align: center;
-            font-size: 2.5vw;
             font-family: 'Noto Sans KR', sans-serif;
 
         }
-
-        /* 각각의 게시판 글*/
-        .boardDiv{
-            color: white;
-            border-bottom: solid 2px black;
-            border-top: solid 2px black;
-            width: 100vw;
-            height: 13vh;
-            background-color: #153040;
-            border-radius: 15px;
-            margin-top: 3%;
-            font-size: 2vw;
-        }
-        /* 라벨이 제목임*/
-        .title{
-            font-size: 5vw;
+        .boardMainBox ul{
+            margin-top: 15%;
+            font-family: 'Noto Sans KR', sans-serif;
         }
 
-        .boardDiv span{
-            font-size: 3vw;
-        }
-        .boardDivs ul{
-            margin-top: 10%;
-        }
+
+
 
     </style>
 
@@ -114,19 +71,23 @@
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
     <script type="text/javascript" th:src="@{/js/main.js}"></script>
+
+
+
+
+
+
 </th:block>
 
 <div layout:fragment="content">
 
-    <div class="mainDiv">
-
-        <div class="leftDiv">
+    <div class="boardMainBox">
 
             <div class="mobileHeader">
                 <a href="/">YBLOGLAB</a>
-                <a href="/auth/boardmain">게시판</a>
+                <a href="/auth/boardmain">자유게시판</a>
                 <a href="/auth/patchnote">공지</a>
-                <a href="#">기술게시판</a>
+                <a href="/auth/skillboard">기술게시판</a>
                 <a href="/auth/Portfolio">포트폴리오</a>
             </div>
 
@@ -141,12 +102,14 @@
                     </div>
                 </a>
 
+
+
                 <ul class="pagination justify-content-center">
-                    <li class="page-item " th:if="${boardsPage.number != 0}"><a class="page-link bg-white text-dark" th:href="@{/auth/boardmain/(page=${boardsPage.number-1})}">Previous</a></li>
-                    <th:block th:each="num : ${#numbers.sequence(0, boardsPage.totalPages - 1)}">
+                    <li class="page-item " th:if="${boardsPage.number != 0}"><a class="page-link bg-white text-dark" th:href="@{/auth/boardmain/(page=${boardsPage.number - 1})}">Previous</a></li>
+                    <th:block th:each="num : ${boardNumList}">
                         <li class="page-item "><a class="page-link bg-white text-dark" th:href="@{/auth/boardmain/(page=${num})}" th:text="${num+1}"></a></li>
                     </th:block>
-                    <li class="page-item " th:if="${boardsPage.last != true}"><a class="page-link bg-dark text-white" th:href="@{/auth/boardmain/(page=${boardsPage.number+1})}">Next</a></li>
+                    <li class="page-item " th:if="${boardsPage.last != true}"><a class="page-link bg-dark text-white" th:href="@{/auth/boardmain/(page=${boardsPage.number + 1})}">Next</a></li>
                 </ul>
             </div>
 
@@ -155,11 +118,8 @@
             </div>
 
 
-        </div>
-
-
-
     </div>
+
 
 
 </div>
