--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -16,6 +16,9 @@
     <!-- 공통으로 쓰이는 css파일을넣는다.-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
+
+
+
     <style >
         html, body{
             overflow: visible;
@@ -24,6 +27,29 @@
             margin : 0;
             padding: 0;
         }
+
+        /* 여기가 모바일*/
+        @media screen and (max-width: 769px) {
+            html, body{
+                overflow: auto;
+                width: 100vw;
+                height: 100vh;
+                margin : 0;
+                padding: 0;
+            }
+        }
+
+        /* 여기가 태블릿*/
+        @media screen and (max-width: 1024px) {
+            html, body{
+                overflow: auto;
+                width: 100vw;
+                height: 100vh;
+                margin : 0;
+                padding: 0;
+            }
+        }
+
         a{
             transition: 0.7s;
         }
@@ -40,8 +66,7 @@
     </th:block>
 
     <!-- 공통으로 쓰이는 css파일을넣는다.-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+
     <!-- 컨텐츠페이지의 스크립트 영역이 들어감 -->
     <th:block layout:fragment="script"></th:block>
 </head>
