--- a/src/main/resources/templates/loginJoin/emailauth.html
+++ b/src/main/resources/templates/loginJoin/emailauth.html
@@ -5,7 +5,28 @@
         layout:decorator="layouts/layout"
 >
 <!-- index.html 고유 CSS 추가 -->
-<th:block layout:fragment="css"> </th:block>
+<th:block layout:fragment="css">
+
+
+    <style th:inline="text">
+
+        @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+
+
+        body{
+            width: 100vw;
+            height: 100vh;
+            background-image: url([[@{/img/newBackpiture.jpg}]]);
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+    </style>
+
+
+</th:block>
 
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
@@ -60,7 +81,7 @@
 
     <div class="jumbotron mt-2 text-center" style="background-color: transparent;color: black ">
         <div style="font-weight: bold; color: whitesmoke;">
-            <p style="letter-spacing: -13px; font-size: 150px; font-family: 한컴돋움">Join Membership</p>
+            <p style="letter-spacing: -13px; font-size: 150px; font-family: 'Noto Sans KR', sans-serif;">회원가입</p>
             <p>카카오 회원가입으로 간편하게</p>
             <p><label style="color: red">카카오톡 동의 쪽에 꼭 이메일 체크를 해주셔야 회원가입이 가능합니다!!</label></p>
         </div>
@@ -73,6 +94,8 @@
     </script>
     <button type="button" style="background-image: url('/img/kakaoJoin.png'); border-color: #FEE500 ;background-size: contain;height: 40px; width: 200px; margin-top: 2%; margin-left: 45%; border-radius: 15px;" onclick="KaKaoLogin(loginRequestURI)"></button>
     <div id="alert"></div>
+
+    </div>
 
 </div>
 </html>
