--- a/src/main/resources/templates/loginJoin/login.html
+++ b/src/main/resources/templates/loginJoin/login.html
@@ -96,6 +96,8 @@
         <script th:inline="javascript">
             let Loginredirect_uri = [[${Loginredirect_uri}]]
         </script>
+
+        <button class="loginButton" type="button"  onclick="kakaoGoJoinPage()">카카오 회원가입</button>
         <button class="loginButton" type="button"  onclick="kakaoLogin(Loginredirect_uri)">카카오 로그인</button>
     </div>
 
