--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -4,6 +4,7 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 >
 <head th:fragment="configFragment">
+    <meta name="google-site-verification" content="CVI_FLp88O39pWyEVsfVMrkGHt_MPXW4PMrvpK3zhJo" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:url" content="https://ybloglab.shop/">
@@ -15,8 +16,6 @@
 
     <!-- 공통으로 쓰이는 css파일을넣는다.-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
-
 
 
     <style >
