log4j 취약점 발견, 해결을 위한 log4j 2.15.0 버전으로 업데이트

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,15 @@
         @import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
+        html, body{
+            overflow: visible;
+            width: 100vw;
+            height: 100vh;
+            margin : 0;
+            padding: 0;
+        }
+
+
         p{
             color: white;
         }
