페이지별 포트폴리오 a태그 href 값 넣어주었습니다(포트폴리오태그)

--- a/src/main/resources/templates/PatchNoteBoard/patchNoteMain.html
+++ b/src/main/resources/templates/PatchNoteBoard/patchNoteMain.html
@@ -167,7 +167,7 @@
 
             <div class="divContent">
                 <p>개인적으로 공부하고 얻은 지식과 <br> 다양한 기능들을 보여주는 블로그입니다.</p>
-                <a href="#"><p>포트폴리오 보러가기</p></a>
+                <a href="/auth/Portfolio"><p>포트폴리오 보러가기</p></a>
             </div>
 
             <div class="divFooter">
