어드민 컨트롤러 부분 수정

--- a/src/main/resources/templates/board/boardMain.html
+++ b/src/main/resources/templates/board/boardMain.html
@@ -158,7 +158,7 @@
                 <a href="/auth/Portfolio"><p>포트폴리오 보러가기</p></a>
             </div>
             <div class="divFooter">
-                <a href="/"><p>YBLOGLAB</p></a> &nbsp;&nbsp;
+                <a href="/"><p>YBLOGLAB</p></a>
                 <a href="https://velog.io/@ddpound"><p>ddpound.log</p></a>
             </div>
         </div>
