--- a/src/main/resources/templates/admin/userManage.html
+++ b/src/main/resources/templates/admin/userManage.html
@@ -15,7 +15,18 @@
             background-repeat: no-repeat;
         }
 
+        .left-div{
+            float: left;
+            width: 70vw;
+            height: 100vh;
+        }
 
+        .right-div{
+            float: right;
+            background-color: black;
+            width: 30vw;
+            height: 100vh;
+        }
 
 
     </style>
@@ -31,7 +42,15 @@
 
 <div layout:fragment="content">
 
-    <div class="form-group text-light font-weight-bold bg-dark text-center">
+    <div class="left-div">
+
+
+    </div>
+
+    <div class="right-div">
+
+        <h3>안녕하세요 관리자님</h3>
+
         <input type="text" id="userName"><br>
         <button type="button" class="btn btn-outline-danger" id="userdelete" onclick="SearchUserDelete()">해당 유저 삭제</button><br>
         <button type="button" class="btn btn-outline-danger" id="boarddelete" onclick="SearchUserBoardDelete()">해당 유저의 게시판글 삭제</button><br>
