--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -4,7 +4,15 @@
         xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 >
 <head th:fragment="configFragment">
+    <!--  구글 검색 노출 코드-->
     <meta name="google-site-verification" content="CVI_FLp88O39pWyEVsfVMrkGHt_MPXW4PMrvpK3zhJo" />
+
+    <!-- 구글 애드센스 코드-->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6469638109814185"
+            crossorigin="anonymous"></script>
+    
+    <!-- 구글 애드센스 코드-->
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta property="og:url" content="https://ybloglab.shop/">
@@ -13,6 +21,7 @@
     <meta property="og:image" content="https://ybloglab.shop/img/YLabLogo.png">
     <meta property="og:description" content="포트폴리오용 개인 블로그" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+
 
     <!-- 공통으로 쓰이는 css파일을넣는다.-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
