--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -22,10 +22,24 @@
     <meta property="og:description" content="포트폴리오용 개인 블로그" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 
+    <!-- 구글 검색 노출을 위한 meta,title 데이터들-->
+    <title>스프링부트 포트폴리오, 기술, 개인 블로그"</title>
+    <meta
+            name="description"
+            content="포트폴리오용 개인블로그, 스프링부트로 만들었습니다. 개인적으로 공부하는 내용과 기술등을 게시하고
+            사소한 것이나 후기, 리뷰도 남기는 등 자유도 높은 개인블로그입니다.">
+
+
+    <!--게시판을 다닐때마다 제목은 title과 descroption등 달라질 예정 -->
+    <!-- 구글 검색 노출을 위한 meta,title 데이터들-->
+
 
     <!-- 공통으로 쓰이는 css파일을넣는다.-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
+    <!-- jquery-->
+
+    <!-- jquery-->
 
     <style >
         html, body{
@@ -76,6 +90,10 @@
     <!-- 공통으로 쓰이는 css파일을넣는다.-->
 
     <!-- 컨텐츠페이지의 스크립트 영역이 들어감 -->
-    <th:block layout:fragment="script"></th:block>
+    <th:block layout:fragment="script">
+
+
+
+    </th:block>
 </head>
 </html>
