--- a/src/main/resources/templates/skillBoard/skillBoardDetails.html
+++ b/src/main/resources/templates/skillBoard/skillBoardDetails.html
@@ -59,9 +59,22 @@
 
 </th:block>
 
-<!-- index.html 고유 스크립트 추가 -->
+
 <th:block layout:fragment="script">
     <script type="text/javascript" th:src="@{/js/skillboard.js}"></script>
+
+    <script th:inline="javascript">
+
+        function myFunction() {
+            document.title = [[${board.getTitle()}]]
+            document.getElementsByName("description")[0].setAttribute("content", "개인적으로 공부한 글입니다.")
+        }
+
+        myFunction();
+
+    </script>
+
+
 
 </th:block>
 
